--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
 
     <body>
+        <div class="container" id="container-boxes">
+
+        </div>
         
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
