--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     </head>
 
     <body>
+        <div>
+            <button id="play">PLAY</button>
+            <select name="dificolta" id="dificolta">
+                <option value="facile">Facile</option>
+                <option value="medio">Medio</option>
+                <option value="difficile">Difficile</option>
+            </select>
+        </div>
         <div class="container" id="container-boxes">
 
         </div>
